compiler-core/src/snapshots/gleam_core__requirement__tests__read_wrong_version.snap
---
source: compiler-core/src/requirement.rs
expression: error.to_string()
---
TOML parse error at line 1, column 9
  |
1 | short = ">= 2.0 and < 3.0.0"
  |         ^^^^^^^^^^^^^^^^^^^^
>= 2.0 and < 3.0.0 is not a valid version. missing patch version: 2.0
